added top padding

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
 
-<div style = "top: 100px; margin: 0 auto; bottom: 500 px;
+<div style = "padding-top: 30px; margin: 0 auto; bottom: 500 px;
   width: 400px;text-align:center; postion:fixed; top:100px;">
 We were born children of God <br>
 From birth to death, we live through the human experience<br>
